--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 <p>Click the button to get the content of the text area.</p>
 
-<button type="button">Try it</button>
+<button type="button" id="btn1">Try it</button>
 
 
     <script src="bundle.js"></script>
